--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="A Vue.js 2.0 Less Used UI Toolkit">
     
     
-    <link rel="preload" href="/royce-ui/assets/css/0.styles.2e854198.css" as="style"><link rel="preload" href="/royce-ui/assets/js/app.9b48bfc6.js" as="script"><link rel="preload" href="/royce-ui/assets/js/4.cb999d87.js" as="script"><link rel="prefetch" href="/royce-ui/assets/js/10.d2d54553.js"><link rel="prefetch" href="/royce-ui/assets/js/11.6a3b8bbe.js"><link rel="prefetch" href="/royce-ui/assets/js/12.2d15a44a.js"><link rel="prefetch" href="/royce-ui/assets/js/13.7fb46011.js"><link rel="prefetch" href="/royce-ui/assets/js/14.1814c715.js"><link rel="prefetch" href="/royce-ui/assets/js/2.fbe1a400.js"><link rel="prefetch" href="/royce-ui/assets/js/3.35496911.js"><link rel="prefetch" href="/royce-ui/assets/js/5.f9408b6f.js"><link rel="prefetch" href="/royce-ui/assets/js/6.43df6017.js"><link rel="prefetch" href="/royce-ui/assets/js/7.c81f9a5d.js"><link rel="prefetch" href="/royce-ui/assets/js/8.d809849a.js"><link rel="prefetch" href="/royce-ui/assets/js/9.ecae8898.js">
-    <link rel="stylesheet" href="/royce-ui/assets/css/0.styles.2e854198.css">
+    <link rel="preload" href="/royce-ui/assets/css/0.styles.7893bb31.css" as="style"><link rel="preload" href="/royce-ui/assets/js/app.3afc03fe.js" as="script"><link rel="preload" href="/royce-ui/assets/js/4.2b3533ab.js" as="script"><link rel="prefetch" href="/royce-ui/assets/js/10.0e1eeabf.js"><link rel="prefetch" href="/royce-ui/assets/js/11.07717747.js"><link rel="prefetch" href="/royce-ui/assets/js/12.06145066.js"><link rel="prefetch" href="/royce-ui/assets/js/2.fbe1a400.js"><link rel="prefetch" href="/royce-ui/assets/js/3.c55d36df.js"><link rel="prefetch" href="/royce-ui/assets/js/5.30df96ed.js"><link rel="prefetch" href="/royce-ui/assets/js/6.00746c19.js"><link rel="prefetch" href="/royce-ui/assets/js/7.cd940bb9.js"><link rel="prefetch" href="/royce-ui/assets/js/8.aa993d0e.js"><link rel="prefetch" href="/royce-ui/assets/js/9.ef5b7145.js">
+    <link rel="stylesheet" href="/royce-ui/assets/css/0.styles.7893bb31.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/royce-ui/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/royce-ui/assets/js/app.9b48bfc6.js" defer></script><script src="/royce-ui/assets/js/4.cb999d87.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/royce-ui/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/royce-ui/assets/js/app.3afc03fe.js" defer></script><script src="/royce-ui/assets/js/4.2b3533ab.js" defer></script>
   </body>
 </html>
