--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="A Vue.js 2.0 Less Used UI Toolkit">
     
     
-    <link rel="preload" href="/royce-ui/assets/css/0.styles.7893bb31.css" as="style"><link rel="preload" href="/royce-ui/assets/js/app.3afc03fe.js" as="script"><link rel="preload" href="/royce-ui/assets/js/4.2b3533ab.js" as="script"><link rel="prefetch" href="/royce-ui/assets/js/10.0e1eeabf.js"><link rel="prefetch" href="/royce-ui/assets/js/11.07717747.js"><link rel="prefetch" href="/royce-ui/assets/js/12.06145066.js"><link rel="prefetch" href="/royce-ui/assets/js/2.fbe1a400.js"><link rel="prefetch" href="/royce-ui/assets/js/3.c55d36df.js"><link rel="prefetch" href="/royce-ui/assets/js/5.30df96ed.js"><link rel="prefetch" href="/royce-ui/assets/js/6.00746c19.js"><link rel="prefetch" href="/royce-ui/assets/js/7.cd940bb9.js"><link rel="prefetch" href="/royce-ui/assets/js/8.aa993d0e.js"><link rel="prefetch" href="/royce-ui/assets/js/9.ef5b7145.js">
-    <link rel="stylesheet" href="/royce-ui/assets/css/0.styles.7893bb31.css">
+    <link rel="preload" href="/royce-ui/assets/css/0.styles.b04f8448.css" as="style"><link rel="preload" href="/royce-ui/assets/js/app.3a79c2fb.js" as="script"><link rel="preload" href="/royce-ui/assets/js/4.2b3533ab.js" as="script"><link rel="prefetch" href="/royce-ui/assets/js/10.4ed5868b.js"><link rel="prefetch" href="/royce-ui/assets/js/11.ad7698f9.js"><link rel="prefetch" href="/royce-ui/assets/js/12.06145066.js"><link rel="prefetch" href="/royce-ui/assets/js/2.fbe1a400.js"><link rel="prefetch" href="/royce-ui/assets/js/3.c55d36df.js"><link rel="prefetch" href="/royce-ui/assets/js/5.30df96ed.js"><link rel="prefetch" href="/royce-ui/assets/js/6.387af4c3.js"><link rel="prefetch" href="/royce-ui/assets/js/7.1c34af37.js"><link rel="prefetch" href="/royce-ui/assets/js/8.3efe821f.js"><link rel="prefetch" href="/royce-ui/assets/js/9.ca5c439e.js">
+    <link rel="stylesheet" href="/royce-ui/assets/css/0.styles.b04f8448.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/royce-ui/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/royce-ui/assets/js/app.3afc03fe.js" defer></script><script src="/royce-ui/assets/js/4.2b3533ab.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/royce-ui/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/royce-ui/assets/js/app.3a79c2fb.js" defer></script><script src="/royce-ui/assets/js/4.2b3533ab.js" defer></script>
   </body>
 </html>
